# tenant-shard-routing

./: .gitignore  README.md
src/: terraform.tfstate
src/gcs-proxy/: Cargo.toml  Dockerfile
src/gcs-proxy/src/: main.rs
src/packer/: envoy-lua-image.pkr.hcl  envoy-wasm-image.pkr.hcl
src/scripts/: build-envoy-lua-image.sh  build-envoy-wasm-image.sh  build-gcs-proxy.sh  build-tenant-lookup.sh  cleanup.sh  deploy.sh  setup-test-mappings.sh  show-tenant-mappings-compact.sh  show-tenant-mappings.sh  test-deployment.sh  test-full-architecture.sh  test-tenant-lookup.sh
src/tenant-lookup-service/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
src/tenant-lookup-service/src/: main.rs
src/tenant-routing-core/: Cargo.toml  README.md
src/tenant-routing-core/src/: cache.rs  config.rs  lib.rs  tenant.rs  tests.rs
src/terraform/: main.tf  monitoring.tf  network.tf  outputs.tf  shards.tf  terraform.tfvars.example  variables.tf
src/terraform/modules/: README.md
src/terraform/modules/envoy/: main.tf  outputs.tf  variables.tf
src/terraform/modules/envoy-global/: main.tf  outputs.tf  variables.tf
src/terraform/modules/envoy/templates/: envoy-lua-startup.sh.tpl  envoy-lua.yaml.tpl  envoy-wasm-startup-optimized.sh.tpl  envoy-wasm-startup.sh.tpl  envoy-wasm.yaml.tpl
src/terraform/modules/gcs/: main.tf  outputs.tf  variables.tf
src/terraform/modules/global-load-balancer/: main.tf  outputs.tf  variables.tf
src/terraform/modules/health-checks/: main.tf  outputs.tf  variables.tf
src/terraform/modules/main-load-balancer/: main.tf  outputs.tf  variables.tf
src/terraform/modules/shard/: load-balancer.tf  main.tf  outputs.tf  variables.tf
src/terraform/startup-scripts/: default-backend.sh  foo-backend.sh
src/wasm-filter/: Cargo.toml  build.sh
src/wasm-filter/src/: lib.rs
