[package]
name = "tenant-lookup-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
google-cloud-storage = "0.20"
google-cloud-auth = "0.16"
anyhow = "1.0"
moka = { version = "0.12", features = ["future"] }
once_cell = "1.19"
futures-util = "0.3"
tenant-routing-core = { path = "../tenant-routing-core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
