[package]
name = "tenant-routing-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
wasm = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
# For tests that need std
serde_json = { version = "1.0", features = ["std"] }