[package]
name = "tenant-router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tenant-routing-core = { path = "../tenant-routing-core", default-features = false, features = ["wasm"] }

[profile.release]
lto = true
opt-level = 3
strip = "symbols"